--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,6 +3,7 @@
   <div class="content_container">
     <div class="content_category">
       <span class="required">* Required fields</span>
+      <%= render :partial => 'contacts/import_form' -%>
       <% @college = College.all %>
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
           <%= devise_error_messages! %>
