--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -962,6 +962,7 @@ ul.news li {
     -moz-box-shadow: 0 5px 50px rgba(0, 0, 0, 0.4);
     -webkit-box-shadow: 0 5px 50px rgba(0, 0, 0, 0.4);
     box-shadow: 0 5px 50px rgba(0, 0, 0, 0.4);
+    overflow: visible;
 }
 
 #conference_column{
