--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title><%= title %></title>
   <%= csrf_meta_tag %>
-  <%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js', 'jquery.toastmessage.js' %>
-  <%= stylesheet_link_tag 'style', 'lionbuttons', 'jquery.fancybox-1.3.4.css', 'jquery.toastmessage.css' %>
+  <%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations','twipsy','/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js', 'jquery.toastmessage.js' %>
+
+  <%= stylesheet_link_tag 'reset', 'style', 'lionbuttons', 'jquery.fancybox-1.3.4.css', 'jquery.toastmessage.css' %>
   <%= javascript_include_tag "facebox" %>
   <%= stylesheet_link_tag 'facebox' %>
-  <%= stylesheet_link_tag 'sign_in_up' if params[:controller]['registrations'] || params[:controller]['sessions'] %>
+  <%= stylesheet_link_tag 'sign_in_up','twipsy' %>
   <% unless Rails.env == 'development' || Rails.env == 'test' %>
       <%= javascript_include_tag 'http://shots.snap.com/ss/d83b52a2e254661d23d1c0974a8b36c3/snap_shots.js' %>
   <% end %>
@@ -31,27 +32,30 @@
   </script>
 </head>
 <body id="<%= @body_id %>">
-<div id="super_wrapper" class="clearfix">
-  <div id="header_bg">
-    <% unless current_user %>
-        <div id="top_menu_bg"></div>
-    <% end %>
-  </div>
-  <div class="center_page clearfix">
-    <div class="top_menu">
-      <% unless current_user %>
+<div id="super_wrapper">
+  <div id="header">
+    <div class="center_page ">
+      <div class="top_menu">
+        <% unless current_user %>
           <span>sign in:</span>
           <a href="/sign_in" class="network icon"></a>
           <%= header_service_link(:facebook) %>
           <%= header_service_link(:twitter) %>
           <div class="line"></div>
           <%= link_to "Sign Up", sign_up_path, :class => "sign_up" %>
-      <% end %>
-    </div>
-    <img src="/images/logo.png" alt="" class="logo"/>
+        <% else %>
+          <%= link_to 'My Posts', user_path(current_user), :class => "white" %>
+          |
+          <%= link_to 'Profile', edit_user_registration_path(current_user), :class => "white" %>
+          |
+          <%= link_to 'Sign Out', sign_out_path, :class => "white" %>
+        <% end %>
+      </div>
 
-    <div class="new_line"></div>
-    <%= user_nav %>
+      <h1 class="logo">Campusmack</h1>
+
+      <%= user_nav %>
+    </div>
   </div>
   <div class="second_body clearfix">
     <div id="basic_content" class="center_page clearfix">
