--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,71 +1,122 @@
-<div class="content new_level with_submenu clearfix">
-  <div class="content_title">Edit <%= resource_name.to_s.humanize %></div>
-  <div class="content_container">
-    <div class="content_category">
-      <span class="required">* Required fields</span>
-      <%= render :partial => 'contacts/import_form' -%>
-      <% @college = College.all %>
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
-          <%= devise_error_messages! %>
+<div class="standard clearfix">
+  <div class="title_wrapper clearfix">
+    <div class="cont_title"><h1>Edit <%= resource_name.to_s.humanize %></h1></div>
+  </div>
+  <div class="column_wrapper clearfix">
+    <div class="left_column edit_profile_left_column">
+      <div class="title_box">
+        <h2>EDIT USER INFO</h2>
+      </div>
+      <div class="form_container edit_profile">
+        <div class="form_wrapper">
+          <% @college = College.all %>
+          <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
+              <div class="table_padding">
+                <table cellpadding="0" cellspacing="0">
+                  <% @college = College.all %>
+                  <tr>
+                    <td class="description"><%= f.label :username, "Username:" %></td>
+                    <td class="entry"><%= f.text_field :username %></td>
+                    <td class="star"><%= mark_required(resource, :username) %></td>
+                  </tr>
 
-          <div class="field">
-            <span class="required">*</span><%= f.label :username, "Username:" %>
-            <%= f.text_field :username %>
-          </div>
-          <div class="field" id="name">
-            <span class="required">*</span><%= f.label :first_name, "First Name:" %>
-            <%= f.text_field :first_name %>
-          </div>
-          <div class="field" id="name">
-            <span class="required">*</span><%= f.label :last_name, "Last Name:" %>
-            <%= f.text_field :last_name %>
-          </div>
-          <br>
+                  <tr>
+                    <td class="description"><%= f.label :first_name, "First Name:" %></td>
+                    <td class="entry"><%= f.text_field :first_name %></td>
+                    <td class="star"><%= mark_required(resource, :first_name) %></td>
+                  </tr>
 
-          <div class="field">
-            <span class="required">*</span><b>Gender:<b>
-            <%= f.select(:gender, [['Male', 'M'], ['Female', 'F']], :include_blank => true) %>
-          </div>
-          <div class="field">
-            <span class="required">*</span><b>Affiliation:<b>
-            <%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true}) %><b> of<b>
-            <%= f.select(:college_id, @college.map { |a| [a.name, a.id] }, {:include_blank => true}) %>
-          </div>
-          <div class="field">
-            <span class="required">*</span><%= f.label :email, "Email:" %>
-            <%= f.text_field :email, :validate =>{:presence => true, :confirmation => true} %>
-          </div>
-          <div class="field">
-            <span class="required">*</span><%= f.label :censor_text, "Censor Text?" %>
-            <%= f.check_box(:censor_text, :validate =>{:presence => true, :confirmation => true}) %>
-          </div>
-          <% if session[:provider].nil? %>
-              <div class="field">
-                <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br/>
-                <%= f.password_field :password %>
+                  <tr>
+                    <td class="description"><%= f.label :last_name, "Last Name:" %></td>
+                    <td class="entry"><%= f.text_field :last_name %></td>
+                    <td class="star"><%= mark_required(resource, :last_name) %></td>
+                  </tr>
+
+                  <tr>
+                    <td class="description"><%= f.label :gender, "Gender:" %></td>
+                    <td class="entry"><%= f.select(:gender, [['Male', 'M'], ['Female', 'F']], {:include_blank => true}, :class => 'gender') %></td>
+                    <td class="star"><%= mark_required(resource, :gender) %></td>
+                  </tr>
+
+                  <tr>
+                    <td class="description"><%= f.label :affiliation, "Affiliation:" %></td>
+                    <td class="entry">
+                      <span class="affiliation_span"><%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true}, :class => 'affilation') %></span>
+                      <span class="college_span">of <%= f.select(:college_id, @college.map { |a| [a.name, a.id] }, {:include_blank => true}, :class => 'college') %></span>
+                    </td>
+                    <td class="star"><%= mark_required(resource, :affiliation) %></td>
+                  </tr>
+
+                  <tr>
+                    <td class="description"><%= f.label :email, "Email:" %></td>
+                    <td class="entry"><%= f.text_field :email, :validate =>{:presence => true, :confirmation => true} %></td>
+                    <td class="star"><%= mark_required(resource, :email) %></td>
+                  </tr>
+
+                  <% if session[:provider].nil? %>
+                      <tr>
+                        <td class="description"><%= f.label :password, "New password:" %></td>
+                        <td class="entry"><%= f.password_field :password, :validate =>{:presence => true, :confirmation => true} %></td>
+
+                      </tr>
+                      <tr>
+                        <td class="description"><%= f.label :password_confirmation, "Confirm password:" %></td>
+                        <td class="entry"><%= f.password_field :password_confirmation, :validate =>{:presence => true, :confirmation => true} %></td>
+
+                      </tr>
+                      <tr id="name">
+                        <td class="description"><%= f.label :current_password, "Old password:" %></td>
+                        <td class="entry"><%= f.password_field :current_password %></td>
+                        <td class="star"><%= mark_required(resource, :password) %></td>
+                      </tr>
+                  <% end %>
+                </table>
               </div>
-              <div class="field">
-                <%= f.label :password_confirmation %>
-                <br/>
-                <%= f.password_field :password_confirmation %>
-              </div>
-              <div class="field" id="name">
-                <span class="required">*</span>
-                <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br/>
-                <%= f.password_field :current_password %></p>
+              <div class="confirmation_container clearfix">
+                <div class="accept clearfix">
+                  <div class="important_notice clearfix">
+                    <span class='required_sign'>*</span>
+                    <span class="important_notice_text">Required fields</span>
+                  </div>
+                  <div class="blue_button"><%= f.submit "UPDATE" %></div>
+                </div>
               </div>
           <% end %>
-          <p><%= f.submit "Update" %></p>
-      <% end %>
-
-      <h3>Cancel my account</h3>
-
-      <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>
-        .</p>
-
-      <p><%= link_to 'Manage my alternative authentications', authentications_path %></p>
-
-      <%= link_to "Back", :back %>
+        </div>
+      </div>
     </div>
+    <div class="right_column">
+      <div class="title_box">
+        <h2>EDIT ACCOUNT INFO</h2>
+      </div>
+      <div class="cancel_account_container">
+        <div class="cancel_account_wrapper">
+          <div class="info_container clearfix">
+            <%= render :partial => "shared/authentications" %>
+            <div class="cancel_account">
+              <div class="white_button">
+                <%= link_to "CANCEL ACCOUNT", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="title_box">
+        <h2>EMAIL SETTINGS</h2>
+      </div>
+      <div class="email_settings_container">
+        <div class="email_settings_wrapper">
+          <ul class="clearfix">
+            <li class="dark_button im"> <%= render :partial => 'contacts/import_form' -%></li>
+            <li class="dark_button mg"> <%= link_to "MANAGE CONTACTS", contacts_path %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="dotted_area">
+    <%= link_to "", :back, :class => 'back_button' %>
   </div>
 </div>
