--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,10 +10,11 @@
       <div class="form_container form_sign_up">
         <div class="form_wrapper">
           <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :validate => true) do |f| %>
-              <% devise_error_messages! %>
-              <table cellpadding="0" cellspacing="0">
-                <%= render 'fields', :f => f %>
-              </table>
+              <div class="table_padding">
+                <table cellpadding="0" cellspacing="0">
+                  <%= render 'fields', :f => f %>
+                </table>
+              </div>
               <div class="important_notice clearfix">
                 <span class='required_sign'>*</span>
                 <span class="important_notice_text">Required fields</span>
@@ -37,17 +38,19 @@
       <div class="sign_in_container">
         <div class="sign_in_wrapper">
           <%= form_for(resource, :as => resource_name, :url => new_session_path(resource_name)) do |f| %>
-              <%= render 'shared/error_messages', :object => f.object %>
-              <table cellpadding="0" cellspacing="0">
-                <tr>
-                  <td class="description"><%= f.label :email, "Email:" %></td>
-                  <td class="entry"><%= f.email_field :email %></td>
-                </tr>
-                <tr>
-                  <td class="description"><%= f.label :password, "Password:" %></td>
-                  <td class="entry"><%= f.password_field :password %></td>
-                </tr>
-              </table>
+              <%#= render 'shared/error_messages', :object => f.object %>
+              <div class="table_padding">
+                <table cellpadding="0" cellspacing="0">
+                  <tr>
+                    <td class="description"><%= f.label :email, "Email:" %></td>
+                    <td class="entry"><%= f.email_field :email %></td>
+                  </tr>
+                  <tr>
+                    <td class="description"><%= f.label :password, "Password:" %></td>
+                    <td class="entry"><%= f.password_field :password %></td>
+                  </tr>
+                </table>
+              </div>
               <%= render :partial => "users/shared/sign_in_links", :locals => {:resource_name => resource_name, :f => f} %>
           <% end %>
         </div>
