--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -36,10 +36,10 @@
     <%= link_to(image_tag('content_email_.png'), share_through_email_form_post_path(post), :method => "GET",:class=>"smack", :remote => true) %>
     <%= render(:partial => "posts/facebook_share", :locals => {:post => post, :image => "content_fb_.png"}) %>
     <%= render(:partial => "posts/twitter_share", :locals => {:post => post, :image => "content_tw_.png"}) %>
-    <span class="divider_vert2">&nbsp;</span>
-    <%= link_to_if(current_user.present?, image_tag('send_as_smack_.png', :alt => 'Send as smack') , share_through_email_form_post_path(post, :smack => true), :rel=>"facebox[.bolder]",:class=>"smack", :method => "GET", :remote => true) %>
-    <span class="divider_vert2">&nbsp;</span>
     <% if signed_in? %>
+        <span class="divider_vert2">&nbsp;</span>
+        <%= link_to(image_tag('send_as_smack_.png', :alt => 'Send as smack') , share_through_email_form_post_path(post, :smack => true), :rel=>"facebox[.bolder]",:class=>"smack", :method => "GET", :remote => true) %>
+        <span class="divider_vert2">&nbsp;</span>
         <%= link_to('<img src="/images/edit_.png" alt="Edit" />'.html_safe, method("edit_#{post.postable_type.downcase}_#{post.type.downcase}_path").call(post.postable, post), :class => 'button') if can? :update, post %>
         <%= link_to('<img src="/images/delete_.png" alt="Delete" />'.html_safe, post, :method => :delete, :confirm => "Delete Post?", :class => 'button') if can? :destroy, post %>
         <%= link_to('<img src="/images/report_.png" alt="Report" />'.html_safe, report_post_path(post), :class => 'button postreport', :id => "post_rep_#{post.id}") if can? :report, post %>
