--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -14,6 +14,13 @@
               <div class="table_padding">
                 <table cellpadding="0" cellspacing="0">
                   <% @college = College.all %>
+
+                  <tr>
+                    <td class="description"><%= f.label :gender, "Gender:" %></td>
+                    <td class="entry"><%= f.select(:gender, [['Male', 'M'], ['Female', 'F']], {:include_blank => true}, :class => 'gender') %></td>
+                    <td class="star"><%= mark_required(resource, :gender) %></td>
+                  </tr>
+
                   <tr>
                     <td class="description"><%= f.label :username, "Username:" %></td>
                     <td class="entry"><%= f.text_field :username %></td>
@@ -30,12 +37,6 @@
                     <td class="description"><%= f.label :last_name, "Last Name:" %></td>
                     <td class="entry"><%= f.text_field :last_name %></td>
                     <td class="star"><%= mark_required(resource, :last_name) %></td>
-                  </tr>
-
-                  <tr>
-                    <td class="description"><%= f.label :gender, "Gender:" %></td>
-                    <td class="entry"><%= f.select(:gender, [['Male', 'M'], ['Female', 'F']], {:include_blank => true}, :class => 'gender') %></td>
-                    <td class="star"><%= mark_required(resource, :gender) %></td>
                   </tr>
 
                   <tr>
@@ -91,9 +92,9 @@
       </div>
       <div class="cancel_account_container">
         <div class="cancel_account_wrapper">
-          <div class="info_container clearfix">
+          <div class="info_container">
             <%= render :partial => "shared/authentications" %>
-            <div class="cancel_account">
+            <div class="cancel_account clearfix">
               <div class="white_button">
                 <%= link_to "CANCEL ACCOUNT", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>
               </div>
