--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -21,8 +21,8 @@
               </div>
               <div class="confirmation_container clearfix">
                 <div class="terms clearfix">
-                  <span class="check_box"><%= check_box_tag :terms %></span><span class="text">I agree to <%= link_to 'Terms and Conditions of Use', root_url %>
-                  and <%= link_to 'Privacy Police', root_url %></span></div>
+                  <span class="check_box"><%= f.check_box :terms_of_service %></span><label for="user_terms_of_service"><span class="text">I agree to <%= link_to 'Terms and Conditions of Use', root_url %>
+                  and <%= link_to 'Privacy Police', root_url %></span></label></div>
 
                 <div class="blue_button"><%= f.submit "SIGN UP" %></div>
               </div>
@@ -42,12 +42,12 @@
               <div class="table_padding">
                 <table cellpadding="0" cellspacing="0">
                   <tr>
-                    <td class="description"><%= f.label :email, "Email:" %></td>
-                    <td class="entry"><%= f.email_field :email %></td>
+                    <td class="description"><%= f.label :new_email, "Email:" %></td>
+                    <td class="entry"><%= f.email_field :email, :id => "new_email"%></td>
                   </tr>
                   <tr>
-                    <td class="description"><%= f.label :password, "Password:" %></td>
-                    <td class="entry"><%= f.password_field :password %></td>
+                    <td class="description"><%= f.label :new_password, "Password:" %></td>
+                    <td class="entry"><%= f.password_field :password, :id => "new_password" %></td>
                   </tr>
                 </table>
               </div>
