--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -78,23 +78,28 @@
     height:395px;
 }
 
-.standard .table_padding {
-  padding-top: 30px;
+.form_sign_up .table_padding, .form_sign_in .table_padding, .edit_profile .table_padding {
+    padding-top: 26px;
 }
+
+.sign_in_wrapper .table_padding {
+    padding-top: 24px;
+}
+
 
 .standard table{
     width: 100%;
 }
 
 .standard table tr{
-    height:35px;
+    height:37px;
 }
 
 
 .standard table .description{
     width: 148px;
     text-align: right;
-    font-size: 10pt;
+    font-size: 13px;
     color:#09689E;
     vertical-align: middle;
 }
@@ -116,18 +121,23 @@
 .standard table .college {width: 144px;}
 
 .standard input{
-    height:27px;
+    height:24px;
     color: #7a7b7d;
-    width: 260px;
+    width: 253px;
     background: #fbfbfb;
     border-width: 1px 1px 2px 1px;
     border-color:#cdcdcd;
     border-style:solid;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    border-radius: 5px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    border-radius: 4px;
     float:left;
+    font-size:13px;
+}
+
+.standard table .entry input {
+    padding: 0 0 0 7px;
 }
 
 .standard input[type="checkbox"]{
@@ -136,7 +146,7 @@
 }
 
 .standard select{
-        height:27px;
+        height:24px;
     /*
     color: #7a7b7d;
     background: #fbfbfb;
@@ -152,7 +162,7 @@
 
 .standard .important_notice{
     width: 260px;
-    margin: 8px 0 6px 157px;
+    margin: 4px 0 0px 157px;
 }
 
 .standard .important_notice .required_sign{
@@ -200,25 +210,6 @@
 .standard .confirmation_container .terms .text a{
     text-decoration: underline;
     color:#7A7B7D;
-}
-
-.blue_button{
-    display:block;
-    height:28px;
-    background: url('/images/bg_blue_button.png') repeat-x;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-.blue_button a{
-    display:block;
-    padding-top: 4px;
-    color: #fff;
-    font-family: Conv_MyriadPro-BoldCond;
-    font-size: 20px;
 }
 
 .blue_button input{
@@ -299,17 +290,8 @@
     background: url('/images/bg_twitter_button.png') repeat-x;
 }
 
-.standard .right_column .sign_up_with_container ul .twitter a .symbol{
-    /*background: url('/images/twitter_symbol_button.png');*/
-}
-
-
 .standard .right_column .sign_up_with_container ul .facebook a{
     background: url('/images/bg_facebook_button.png') repeat-x;
-}
-
-.standard .right_column .sign_up_with_container ul .facebook a .symbol{
-    /*background: url('/images/facebook_symbol_button.png');*/
 }
 
 .standard .right_column .sign_up_with_container ul .google a{
@@ -319,7 +301,6 @@
 .standard .right_column .sign_up_with_container ul .google a .symbol{
     width:30px;
     margin: 0 0 0 0px;
-    /*background: url('/images/google_symbol_button.png');*/
 }
 
 .standard .right_column .sign_in_container{
@@ -353,6 +334,10 @@
 
 .standard .sign_in_container input{
     width: 190px;
+}
+
+.standard .sign_in_container .links{
+    margin: 24px 0 0 0;
 }
 
 .standard .sign_in_container .links .l_column{
@@ -466,25 +451,6 @@
     float:left;
 }
 
-.sign_up_now_button{
-    display:block;
-    height:28px;
-    background: url('/images/sign_up_now_button.png') repeat-x;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-.sign_up_now_button a{
-    display:block;
-    padding-top: 4px;
-    color: #fff;
-    font-family: Conv_MyriadPro-BoldCond;
-    font-size: 20px;
-}
-
 .standard .form_sign_up .star{
     width:54px;
     vertical-align: super;
@@ -499,8 +465,8 @@
     display:none;
 }
 
-.standard .description .field_with_errors label{
-    color:red;
+.standard .description .field_with_errors label, .field_with_errors label .text a{
+    color:red!important;
 }
 
 .standard .affiliation_span{display: inline-block;float:left}
@@ -537,10 +503,7 @@
 }
 
 .dotted_area .back_button{
-    width: 85px;
     margin: 10px 14px 0 0;
-    height:25px;
-    background: url('/images/back_button.png') repeat-x;
     float:right;
 }
 
@@ -571,8 +534,7 @@
 }
 
 .info_container .auths {
-  height: 130px;
-  margin-bottom: 10px;
+
 }
 
 .info_text{
@@ -591,33 +553,6 @@
 .additional_buttons{
     float:right;
     margin:33px 7px 0 0;
-}
-
-.dark_button{
-    margin: 0 0px 0 0;
-    display:block;
-    height:28px;
-    background: url('/images/dark_button_bg.png') repeat-x;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    border-radius: 5px;
-    text-align: center;
-    float:left;
-}
-
-.dark_button a{
-    display:block;
-    padding-top: 4px;
-    padding-left:9px;
-    padding-right: 9px;
-    color: #fff;
-    font-family: Conv_MyriadPro-BoldCond;
-    font-size: 20px;
-}
-
-#services_manage{
-   float:left;
 }
 
 #services_manage .service_in_use{
@@ -646,10 +581,6 @@
     color: #48494e;
 }
 
-#services_manage .service_userdata p{
-
-}
-
 #services_manage #services_list{
     width: 233px;
     -moz-border-radius: 5px;
@@ -661,11 +592,9 @@
     padding: 20px 0 9px 37px;
 }
 
-
 #services_manage #services_list li{
     margin: 0px 0 11px 0;
 }
-
 
 #services_manage #services_list li a{
     display:block;
@@ -719,35 +648,12 @@
 .cancel_account_container .cancel_account{
     padding:16px 0 25px 0;
     width: 273px;
-}
-
-.white_button{
-    margin: 0 9px 0 0;
-    display:block;
-    height:28px;
-    background: url('/images/white_button_bg.png') repeat-x;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    border-radius: 5px;
-    text-align: center;
-    border-color:#bebebe;
-    border-width: 0 1px 1px 0;
-    border-style: solid;
-}
-
-.white_button a{
-    display:block;
-    padding-top: 4px;
-    padding-left:10px;
-    padding-right: 10px;
-    color: #4190c9;
-    font-family: Conv_MyriadPro-BoldCond;
-    font-size: 20px;
+    border-top: 1px solid #cbcbcb;
 }
 
 .cancel_account_container .cancel_account .white_button{
     float:left;
+    margin: 0 9px 0 0;
 }
 
  .email_settings_container{
@@ -767,7 +673,7 @@
 }
 
 .email_settings_wrapper ul{
-    margin: 22px 7px 22px 7px;
+    margin: 5px ;
 }
 
 .email_settings_wrapper ul li{
@@ -785,3 +691,4 @@
 .email_settings_wrapper .dark_button a {font-size: 18px;}
 
 .edit_profile_left_column .edit_profile{height:513px;}
+
